added firebase database and image storage

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/portfolio-d9972-firebase-adminsdk-qpcnf-71d90e4255.json
