--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -24,7 +24,8 @@
         "launchBrowser": true,
         "applicationUrl": "https://localhost:7116;http://localhost:5295",
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Development",
+          "GOOGLE_APPLICATION_CREDENTIALS": "portfolio-d9972-firebase-adminsdk-qpcnf-71d90e4255.json"
         }
       },
       "IIS Express": {
